# jpegli-coder

./: README.md  build.gradle.kts  gradle.properties  gradlew  jitpack.yml  settings.gradle.kts
.github/workflows/: build.yml  create_release.yml
app/: build.gradle.kts
app/src/androidTest/java/io/github/awxkee/jpegli/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/awxkee/jpegli/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/io/github/awxkee/jpegli/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jpegli-coder/: build.gradle.kts
jpegli-coder/src/androidTest/java/io/github/awxkee/jpegli/coder/: ExampleInstrumentedTest.kt
jpegli-coder/src/main/: AndroidManifest.xml
jpegli-coder/src/main/cpp/: CMakeLists.txt  HardwareBitmap.cpp  HardwareBitmap.h  HardwareBuffersCompat.cpp  HardwareBuffersCompat.h  JPEGEncoder.cpp  JPEGEncoder.h  JniException.cpp  JniException.h  OutputStreamAdapter.h  Rgb1010102.cpp  Rgb1010102.h  Rgb565.cpp  Rgb565.h  RgbaF16ToRgb.cpp  RgbaF16ToRgb.h  RgbaToRgb.cpp  RgbaToRgb.h  coder.cpp  half.cpp  half.hpp  types.h
jpegli-coder/src/main/cpp/jpegli/: common.h  encode.h
jpegli-coder/src/main/java/io/github/awxkee/jpegli/coder/: BitmapExtension.kt  (+3 more)
(+4 files in other folders)
